--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -8,6 +8,10 @@
     "wdth" 100;
 }
 /* shared style */
+.secondary-bg {
+  background: #FFF8F3;
+}
+
 .text-primary {
   color: #FD6E0A;
 }
@@ -20,6 +24,17 @@
   padding: 18px 35px;
   border-radius: 5px;
   border: none;
+}
+
+.section-title {
+  font-size: 35px;
+  font-weight: bold;
+  color: #181818;
+}
+
+.section-description {
+  font-size: 18px;
+  color: #757575;
 }
 
 .dark-2{
@@ -95,4 +110,36 @@ nav ul li a {
 
 .banner-profile-pic {
   width: 580px;
+}
+
+/* Main style */
+
+main {
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+
+/* About style */
+
+.about {
+  border-radius: 10px;
+  padding: 130px 150px;
+  text-align: center;
+  margin-top: 130px;
+}
+
+.about-container {
+  background: white;
+  border: 1px solid black;
+  padding: 0px 10px;
+}
+
+.about-items {
+  display: flex;
+  justify-content: space-around;
+}
+
+.item-description {
+  font-weight: 600;
 }
