--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -32,6 +32,10 @@
   color: #181818;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .section-description {
   font-size: 18px;
   color: #757575;
@@ -119,6 +123,11 @@ main {
   margin: 0 auto;
 }
 
+main section {  
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
 
 /* About style */
 
@@ -126,7 +135,6 @@ main {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
 }
 
 .about-container {
@@ -142,4 +150,17 @@ main {
 
 .item-description {
   font-weight: 600;
+}
+
+/* What I do styles/ skills section styles */
+.skills-container {
+  display: flex;
+  gap: 24px;
+  margin-top: 50px;
+}
+
+.skill {
+  padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
 }
