--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -25,6 +25,18 @@
   border-radius: 5px;
   border: none;
 }
+.btn-hover {
+  background: #FD6E0A;
+  background: transparent;
+  font-weight: bold;
+  color: #FD6E0A;
+  border: 2px solid #FD6E0A;
+  font-size: 20px;
+  padding: 18px 35px;
+  border-radius: 5px;
+}
+
+
 
 .section-title {
   font-size: 35px;
@@ -163,4 +175,55 @@ main section {
   padding: 30px;
   border-radius: 5px;
   box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* Resume section styles */
+.resume-container {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 100px;
+}
+
+.resume-column {
+  max-width: 511px;
+}
+
+.resume-column-title {
+  font-weight: bold;
+  font-size: 25px;
+  color: #474747;
+}
+
+.experience {
+  padding: opx -20px;
+}
+
+
+.experience-title {
+  font-weight: bold;
+  font-size: 18px;
+  color: #474747;
+}
+
+.experience-sub-title {
+  font-weight: 600;
+  font-size: 16px;
+  margin-top: -20px;
+}
+
+.experience-sub-title {
+  color: #757575;
+}
+
+.experience-description {
+  margin-top: -10px;
+  color: #757575;
+}
+
+.resume hr {
+  margin: 30px 0px;
+}
+
+.resume button {
+  margin-top: 50px;
 }
