--- a/styles/portfolio.css
+++ b/styles/portfolio.css
@@ -1,23 +1,20 @@
-
-
 .open-sans-normal {
   font-family: "Open Sans", serif;
   font-optical-sizing: auto;
   font-style: normal;
-  font-variation-settings:
-    "wdth" 100;
+  font-variation-settings: "wdth" 100;
 }
 /* shared style */
 .secondary-bg {
-  background: #FFF8F3;
+  background: #fff8f3;
 }
 
 .text-primary {
-  color: #FD6E0A;
+  color: #fd6e0a;
 }
 
 .btn-primary {
-  background: #FD6E0A;
+  background: #fd6e0a;
   font-weight: bold;
   color: white;
   font-size: 20px;
@@ -26,17 +23,15 @@
   border: none;
 }
 .btn-hover {
-  background: #FD6E0A;
+  background: #fd6e0a;
   background: transparent;
   font-weight: bold;
-  color: #FD6E0A;
-  border: 2px solid #FD6E0A;
+  color: #fd6e0a;
+  border: 2px solid #fd6e0a;
   font-size: 20px;
   padding: 18px 35px;
   border-radius: 5px;
 }
-
-
 
 .section-title {
   font-size: 35px;
@@ -53,7 +48,7 @@
   color: #757575;
 }
 
-.dark-2{
+.dark-2 {
   color: #474747;
 }
 
@@ -61,11 +56,11 @@
   color: #757575;
 }
 
-
 /* Header style */
 
 .header {
-  background-image: url('../images/developer.png'), url('../images/header_bg.png');
+  background-image: url("../images/developer.png"),
+    url("../images/header_bg.png");
   background-repeat: no-repeat;
   background-position: top left, bottom right;
 }
@@ -97,7 +92,6 @@ nav ul li a {
   text-decoration: none;
   font-size: 20px;
 }
-
 
 /* Banner styles */
 .banner {
@@ -135,11 +129,10 @@ main {
   margin: 0 auto;
 }
 
-main section {  
+main section {
   margin-top: 130px;
   margin-bottom: 130px;
 }
-
 
 /* About style */
 
@@ -198,7 +191,6 @@ main section {
   padding: opx -20px;
 }
 
-
 .experience-title {
   font-weight: bold;
   font-size: 18px;
@@ -226,4 +218,45 @@ main section {
 
 .resume button {
   margin-top: 50px;
+}
+
+/* Footer section style */
+
+footer {
+  padding: 130px 220px;
+  display: flex;
+  gap: 100px;
+}
+
+.footer-column {
+  width: 50%;
+}
+
+footer .social-icon {
+  display: flex;
+  margin-top: 30px;
+}
+
+footer .social-icon a {
+  width: 50px;
+}
+
+footer input[type="text"],
+footer input[type="email"] {
+  height: 64px;
+  border-radius: 5px;
+  background: white;
+  display: block;
+  width: 100%;
+  padding: 5px 10px;
+  margin-bottom: 24px;
+  border: none;
+  /* outline: none; */
+}
+
+footer textarea {
+  width: 100%;
+  border: none;
+  padding: 5px 10px;
+  margin-bottom: 24px;
 }
